Tailwind Initilizing File to work

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <link href="/dist/output.css" rel="stylesheet">
     </head>
     <body>
-        <h1 class="text-3xl font-bold underline">
+        <h1 class="bg-red-50">
             Hello world!
         </h1>
     </body>
